# FayEngine

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
FayEngine.xcodeproj/: project.pbxproj
FayEngine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FayEngine.xcodeproj/project.xcworkspace/xcuserdata/tomalbrecht.xcuserdatad/: UserInterfaceState (Toms-MacBook-Pros in Konflikt stehende Kopie 2016-01-16).xcuserstate  UserInterfaceState.xcuserstate
FayEngine.xcodeproj/xcuserdata/tomalbrecht.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
FayEngine.xcodeproj/xcuserdata/tomalbrecht.xcuserdatad/xcschemes/: FayEngine-iOS.xcscheme  FayEngine.xcscheme  xcschememanagement.plist
cmake/: FindSDL2_mixer.cmake  FindSDL2_net.cmake  Findsdl2image.cmake  Findsdl2mixer.cmake  Findsdl2net.cmake
doc/: Basic Concepts.md  Doxyfile  Introduction.md  Roadmap.md
doc/html/: _action_8hpp_source.html  _audio_engine_8hpp_source.html  _button_node_8hpp_source.html  _callback_action_8hpp_source.html  _draw_texture_8hpp_source.html  _easing_functions_8hpp_source.html  _engine_helper_8hpp_source.html  _fade_alpha_to_action_8hpp_source.html  _fay_engine_8h_source.html  _jump_by_action_8hpp_source.html  _label_node_8hpp_source.html  _move_by_action_8hpp_source.html  _network_manager_8hpp_source.html  _node_8hpp_source.html  _remove_from_parent_8hpp_source.html  _repeat_action_8hpp_source.html  _rotate_by_action_8hpp_source.html  _rotate_to_action_8hpp_source.html  _scale_to_action_8hpp_source.html  _scene_8hpp_source.html  _sequence_action_8hpp_source.html  _sprite_8hpp_source.html  _sprite_animation_action_8hpp_source.html  _texture_8hpp_source.html  _thread_manager_8hpp_source.html  _tiled_map_node_8hpp_source.html  _types_8hpp_source.html  _wait_action_8hpp_source.html  _window_8hpp_source.html  annotated.html  annotated_dup.js  class_action-members.html  class_action.html  class_action.js  class_action__coll__graph.map  class_action__coll__graph.md5  class_action__inherit__graph.map  class_action__inherit__graph.md5  class_button_node-members.html  class_button_node.html  (+193 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  functions_0.js  functions_1.js  functions_10.js  functions_12.js  functions_2.js  functions_3.js  (+24 more)
examples/: example  main.cpp
examples/MultipleTexturesAnimation/: Makefile  example  main.cpp
examples/ScenesSubclass/: Makefile  MyScene.cpp  MyScene.hpp  example  main.cpp
examples/SpriteAndAction/: Makefile  example  main.cpp
examples/SubtexturesAndAnimation/: Makefile  MyScene.cpp  MyScene.hpp  main.cpp
include/: Action.hpp  AudioEngine.hpp  ButtonNode.hpp  CallbackAction.hpp  DrawTexture.hpp  EasingFunctions.h  EasingFunctions.hpp  EngineHelper.hpp  FadeAlphaToAction.hpp  FayEngine.h  JumpByAction.hpp  LabelNode.hpp  MoveByAction.hpp  NetworkManager.hpp  Node.hpp  RemoveFromParent.hpp  RepeatAction.hpp  RotateAction.hpp  RotateByAction.hpp  RotateToAction.hpp  ScaleToAction.hpp  Scene.hpp  SequenceAction.hpp  Sprite.hpp  SpriteAnimationAction.hpp  Texture.hpp  ThreadManager.hpp  TiledMapNode.hpp  TiledMapNode2.hpp  TintToAction.hpp  Types.hpp  WaitAction.hpp  Window.hpp  action.hpp  app_window.hpp  button_node.hpp  callback_action.hpp  draw_texture.hpp  easing_function.hpp  engine_helper.hpp  (+22 more)
src/: AudioEngine.cpp  AudioEngine.hpp  DrawTexture.cpp  DrawTexture.hpp  EngineHelper.cpp  EngineHelper.hpp  FayEngine.h  NetworkManager.cpp  NetworkManager.hpp  Texture.cpp  Texture.hpp  ThreadManager.cpp  ThreadManager.hpp  Types.cpp  Types.hpp  Window.cpp  Window.hpp  app_window.cpp  draw_texture.cpp  engine_helper.cpp  texture.cpp  tmxparser.cpp  tmxparser.h  types.cpp
src/actions/: Action.cpp  Action.hpp  CallbackAction.cpp  CallbackAction.hpp  EasingFunctions.cpp  EasingFunctions.h  EasingFunctions.hpp  FadeAlphaToAction.cpp  FadeAlphaToAction.hpp  JumpByAction.cpp  JumpByAction.hpp  MoveByAction.cpp  MoveByAction.hpp  RemoveFromParent.cpp  RemoveFromParent.hpp  RepeatAction.cpp  RepeatAction.hpp  RotateAction.cpp  RotateAction.hpp  RotateByAction.cpp  RotateByAction.hpp  RotateToAction.cpp  RotateToAction.hpp  ScaleToAction.cpp  ScaleToAction.hpp  SequenceAction.cpp  SequenceAction.hpp  SpriteAnimationAction.cpp  SpriteAnimationAction.hpp  TintToAction.cpp  WaitAction.cpp  WaitAction.hpp  action.cpp  callback_action.cpp  easing_function.cpp  fade_action.cpp  jump_by_action.cpp  move_by_action.cpp  remove_action.cpp  repeat_action.cpp  (+6 more)
src/nodes/: ButtonNode.cpp  ButtonNode.hpp  LabelNode.cpp  LabelNode.hpp  Node.cpp  Node.hpp  Scene.cpp  Scene.hpp  Sprite.cpp  Sprite.hpp  TiledMapNode.cpp  TiledMapNode.hpp  button_node.cpp  label_node.cpp  node.cpp  scene.cpp  sprite.cpp  tiled_map.cpp
tests/: main.cpp  matrix.cpp  sprite.cpp
